<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_20dp"
        android:background="@drawable/rounded_corner_background_yellow"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/welcome_to_thermotag"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:background="@drawable/rounded_corner_background"
            android:gravity="center_vertical"
            android:hint="@string/username"
            android:paddingStart="35dp"
            android:textColor="#000000"
            android:textSize="25sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner_background"
            android:hint="@string/password"
            android:inputType="text|textPassword"
            android:paddingStart="35dp"
            android:textColor="#000000"
            android:textSize="25sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/enterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFC107"
            android:text="@string/login"
            android:textColor="#000000"
            android:textSize="25sp" />

        <Button
            android:id="@+id/belumRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:text="@string/belum_punya_akun_daftar_di_sini"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/textViewTitle10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="10dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/made_with_love_by_sebastian"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
